# golang

./: .gitignore  .pre-commit-config.yaml  BUILD  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  go.work  go.work.sum  hello-world
.github/workflows/: cli-demo_build.yaml  cli-demo_release.yaml  terraform-apply.yaml  terraform-plan.yaml  terraform.yaml
api/hello-world/: BUILD.bazel  main.go
api/weather/: BUILD.bazel  main.go
cmd/cli-bubbletea/: BUILD.bazel  cli.go  models.go
cmd/cli-demo/: BUILD.bazel  actions.go  command-config.json  commands.go  main.go  subcommands.go
cmd/cobra/: BUILD.bazel  main.go
cmd/cobra/cmd/: BUILD.bazel  init.go  root.go
cmd/codewars/bit-counting/: BUILD.bazel  main.go
cmd/codewars/comp-array/: BUILD.bazel  main.go
cmd/euler/12/: 12.py  BUILD.bazel  main.go  main.go.wrong
cmd/euler/13/: BUILD.bazel  main.go
cmd/euler/14/: BUILD.bazel  main.go
cmd/euler/16/: BUILD.bazel  main.go
cmd/euler/17/: BUILD.bazel  main.go
cmd/euler/18/: BUILD.bazel  example.py  main.go
cmd/euler/19/: BUILD.bazel  main.go
cmd/euler/20/: BUILD.bazel  main.go
cmd/euler/21/: BUILD.bazel  main.go
cmd/euler/22/: BUILD.bazel  main.go
cmd/euler/23/: BUILD.bazel  main.go
cmd/gin/: BUILD.bazel  main.go  manifest.yml
cmd/github/clone-all-repos/: BUILD.bazel  main.go
cmd/gpt/: BUILD.bazel  main.go
cmd/hello-world/: BUILD.bazel  main.go
cmd/hello-world-3d-game/: BUILD.bazel
cmd/hello-world-lamba/: README.TOOLKIT.md  README.md  template.yaml
cmd/hello-world-lamba/src/: BUILD.bazel
cmd/kubernetes-controller/: BUILD.bazel  Dockerfile  main.go  manifest.yaml
cmd/lambda/13/: BUILD.bazel  main.go
cmd/leetcode/add-two-numbers/: BUILD.bazel  main.go
cmd/leetcode/basic-calculator-ii/: BUILD.bazel  main.go
cmd/leetcode/two-sum/: BUILD.bazel  main.go
cmd/math-test/: BUILD.bazel  main.go
cmd/mongo/: BUILD.bazel
cmd/okta-cli/: BUILD.bazel  main.go
cmd/prompt-ui/: BUILD.bazel  main.go
cmd/proto/: BUILD.bazel  main.go
cmd/proto/models/addressbooks/: BUILD.bazel  address_book.proto
cmd/proto/models/addressbooks/addressbook/: BUILD.bazel  address_book.pb.go
cmd/proto/models/persons/: BUILD.bazel  go.mod  person.proto
cmd/proto/models/persons/person/: BUILD.bazel  go.mod  person.pb.go
cmd/proto/sample/google.golang.org/grpc/examples/helloworld/helloworld/: BUILD.bazel  helloworld.pb.go
cmd/proto/sample/greeter_client/: BUILD.bazel
cmd/proto/sample/greeter_server/: BUILD.bazel
cmd/proto/sample/helloworld/: BUILD.bazel  helloworld.pb.go
cmd/scavenger/: BUILD.bazel  main.go
cmd/sfn-demo/: BUILD.bazel  main.go
cmd/slack-bot/: BUILD.bazel
cmd/terraform-chatbot/: BUILD.bazel  main.go  terraform-declarative.go  terraform-declarative.go.deprecated  terraform-declarative.ts  terraform.go  terraform.go.deprecated
cmd/tester/: BUILD.bazel  main.go
iac/terraform/: dummy.tf  locals.tf  provider.tf  s3.tf
lambda/hello-world/: BUILD.bazel  main.go
pkg/do-a-thing/: BUILD.bazel  go.mod  main.go
pkg/do-a-thing/v2/: BUILD.bazel  go.mod  main.go
pkg/do-a-thing/v3/: BUILD.bazel  go.mod  main.go
pkg/euler/: BUILD.bazel  main.go
pkg/euler/13/: BUILD.bazel  main.go
pkg/examples/hello-world-api/: BUILD.bazel  webserver.go
pkg/examples/hello-world-api/endpoints/: BUILD.bazel  healthz.go  posts.go  welcome.go
pkg/hello-world/: BUILD.bazel  go.mod  hello.go
pkg/helpers/: BUILD.bazel  go.mod  strings.go
pkg/kubernetes-client/: BUILD.bazel  main.go
pkg/log/: BUILD.bazel  go.mod  zap.go
pkg/math/: BUILD.bazel  main.go
pkg/okta/: BUILD.bazel  main.go
pkg/rest/: BUILD.bazel  main.go
pkg/sfn-handler/: BUILD.bazel  main.go
pkg/subcommand/: BUILD.bazel  main.go
pkg/webserver/: BUILD.bazel  go.mod  main.go
pkg/webserver/endpoints/: BUILD.bazel  debugz.go  endpointHandler.go  go.mod  healthz.go  quitquitquit.go
pkg/webserver/mux/: BUILD.bazel  go.mod  servemux.go
pkg/webserver/routing/: BUILD.bazel  go.mod  route.go
src/cmd/examples/hello-world/: BUILD.bazel
src/cmd/examples/hello-world-api/: BUILD.bazel  main.go
ui/example-gui/: BUILD.bazel  go.mod  main.go
