load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "weather_lib",
    srcs = ["main.go"],
    importpath = "golang/api/weather",
    visibility = ["//visibility:private"],
    deps = ["//pkg/webserver"],
)

go_binary(
    name = "weather",
    embed = [":weather_lib"],
    visibility = ["//visibility:public"],
)
