load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli-bubbletea_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/cli-bubbletea",
    tags = ["excluded"],
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_charmbracelet_bubbles//textinput",
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)

go_binary(
    name = "cli-bubbletea",
    embed = [":cli-bubbletea_lib"],
    tags = ["excluded"],
    visibility = ["//visibility:public"],
)
