load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli-demo_lib",
    srcs = [
        "actions.go",
        "commands.go",
        "main.go",
    ],
    importpath = "golang/cmd/cli-demo",
    tags = ["excluded"],
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_jeffpignataro_golang_pkg_do_a_thing//:go_default_library",
        "@com_github_jeffpignataro_golang_pkg_do_a_thing_v2//:go_default_library",
        "@com_github_jeffpignataro_golang_pkg_do_a_thing_v3//:go_default_library",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_binary(
    name = "cli-demo",
    embed = [":cli-demo_lib"],
    tags = ["excluded"],
    visibility = ["//visibility:public"],
)
