load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli-demo_lib",
    srcs = [
        "actions.go",
        "commands.go",
        "main.go",
    ],
    importpath = "github.com/jeffpignataro/golang/cmd/cli-demo",
    tags = ["excluded"],
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/do-a-thing",
        "//pkg/do-a-thing/v2:do-a-thing",
        "//pkg/do-a-thing/v3:do-a-thing",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_binary(
    name = "cli-demo",
    embed = [":cli-demo_lib"],
    tags = ["excluded"],
    visibility = ["//visibility:public"],
)
