load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gpt_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/gpt",
    visibility = ["//visibility:private"],
    deps = ["@com_github_sashabaranov_go_openai//:go-openai"],
)

go_binary(
    name = "gpt",
    embed = [":gpt_lib"],
    visibility = ["//visibility:public"],
)
