load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello-world-3d-game_lib",
    srcs = ["main.go"],
    importpath = "golang/cmd/hello-world-3d-game",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_g3n_engine//app",
        "@com_github_g3n_engine//camera",
        "@com_github_g3n_engine//core",
        "@com_github_g3n_engine//geometry",
        "@com_github_g3n_engine//gls",
        "@com_github_g3n_engine//graphic",
        "@com_github_g3n_engine//gui",
        "@com_github_g3n_engine//light",
        "@com_github_g3n_engine//material",
        "@com_github_g3n_engine//math32",
        "@com_github_g3n_engine//renderer",
        "@com_github_g3n_engine//util/helper",
        "@com_github_g3n_engine//window",
    ],
)

go_binary(
    name = "hello-world-3d-game",
    embed = [":hello-world-3d-game_lib"],
    visibility = ["//visibility:public"],
)
