load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "kubernetes-controller_lib",
    srcs = ["main.go"],
    importpath = "golang/cmd/kubernetes-controller",
    visibility = ["//visibility:private"],
    deps = ["//pkg/kubernetes-client"],
)

go_binary(
    name = "kubernetes-controller",
    embed = [":kubernetes-controller_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "kubernetes-controller_image",
    base = "@golang_amd64//image",
    entrypoint = ["/kubernetes-controller"],
    files = [":kubernetes-controller"],
)
