load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kubernetes-controller_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/kubernetes-controller",
    tags = ["excluded"],
    visibility = ["//visibility:private"],
)

go_binary(
    name = "kubernetes-controller",
    embed = [":kubernetes-controller_lib"],
    tags = ["excluded"],
    visibility = ["//visibility:public"],
)
