load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "math-test_lib",
    srcs = ["main.go"],
    importpath = "golang/cmd/math-test",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "math-test",
    embed = [":math-test_lib"],
    visibility = ["//visibility:public"],
)
