load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "okta-cli_lib",
    srcs = ["main.go"],
    importpath = "golang/cmd/okta-cli",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/okta",
        "//vendor/go.uber.org/zap",
    ],
)

go_binary(
    name = "okta-cli",
    embed = [":okta-cli_lib"],
    visibility = ["//visibility:public"],
)
