load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "prompt-ui_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/prompt-ui",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_manifoldco_promptui//:promptui",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "prompt-ui",
    embed = [":prompt-ui_lib"],
    visibility = ["//visibility:public"],
)
