load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:resolve go github.com/jeffpignataro/golang/cmd/proto/models/persons/person //cmd/proto/models/persons/person:person_lib
go_library(
    name = "proto_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/proto",
    visibility = ["//visibility:private"],
    deps = ["//cmd/proto/models/persons/person:person_lib"],
)

go_binary(
    name = "proto",
    embed = [":proto_lib"],
    visibility = ["//visibility:public"],
)
