load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "scavenger_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/scavenger",
    visibility = ["//visibility:private"],
    deps = ["//pkg/rest"],
)

go_binary(
    name = "scavenger",
    embed = [":scavenger_lib"],
    visibility = ["//visibility:public"],
)
