load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sfn-demo_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/sfn-demo",
    tags = ["excluded"],
    visibility = ["//visibility:private"],
    deps = ["@com_github_billheroinc_logrus//:logrus"],
)

go_binary(
    name = "sfn-demo",
    embed = [":sfn-demo_lib"],
    tags = ["excluded"],
    visibility = ["//visibility:public"],
)
