load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "slack-bot_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/slack-bot",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_slack_go_slack//:slack",
        "@com_github_slack_go_slack//slackevents",
        "@com_github_slack_go_slack//socketmode",
    ],
)

go_binary(
    name = "slack-bot",
    embed = [":slack-bot_lib"],
    visibility = ["//visibility:public"],
)
