load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "terraform-chatbot_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/terraform-chatbot",
    visibility = ["//visibility:private"],
    deps = [
        "@com_google_cloud_go_dialogflow//apiv2",
        "@com_google_cloud_go_dialogflow//apiv2/dialogflowpb",
    ],
)

go_binary(
    name = "terraform-chatbot",
    embed = [":terraform-chatbot_lib"],
    visibility = ["//visibility:public"],
)
