load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "tester_lib",
    srcs = ["main.go"],
    importpath = "golang/cmd/tester",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/rest",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "tester",
    embed = [":tester_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "tester_image",
    base = "@golang_amd64//image",
    entrypoint = ["/tester"],
    files = [":tester"],
)

container_push(
    name = "tester_push",
    format = "Docker",
    image = ":tester_image",
    registry = "index.docker.io",
    repository = "jeffp2662/golang-test-api",
    tag = "latest",
    tags = ["excluded"],
)
