load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tester_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/tester",
    visibility = ["//visibility:private"],
    deps = ["//pkg/rest"],
)

go_binary(
    name = "tester",
    embed = [":tester_lib"],
    visibility = ["//visibility:public"],
)
