load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello-world_lib",
    srcs = ["main.go"],
    data = [
        "//lambda/hello-world:template_yml",
    ],
    importpath = "github.com/jeffpignataro/golang/lambda/hello-world",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/hello-world",
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)

go_binary(
    name = "hello-world",
    embed = [":hello-world_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "template_yml",
    srcs = [
        "template.yml",
    ],
)
