load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kubernetes-client",
    srcs = ["main.go"],
    importpath = "golang/pkg/kubernetes-client",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
    ],
)
