load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "webserver",
    srcs = ["main.go"],
    importpath = "golang/pkg/webserver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/helpers",
        "//pkg/webserver/endpoints",
        "//pkg/webserver/mux",
        "//pkg/webserver/routing",
        "//vendor/go.uber.org/fx",
        "//vendor/go.uber.org/fx/fxevent",
        "//vendor/go.uber.org/zap",
    ],
)
