load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "init.go",
        "root.go",
        "version.go",
    ],
    importpath = "golang/cmd/cobra/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/mitchellh/go-homedir",
        "//vendor/github.com/spf13/cobra",
        "//vendor/github.com/spf13/viper",
    ],
)
