load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "comp-array_lib",
    srcs = ["main.go"],
    importpath = "workspace/cmd/codewars/comp-array",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "comp-array",
    embed = [":comp-array_lib"],
    visibility = ["//visibility:public"],
)
