load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "12_lib",
    srcs = ["main.go"],
    importpath = "workspace/cmd/euler/12",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "12",
    embed = [":12_lib"],
    visibility = ["//visibility:public"],
)
