load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "12_lib",
    srcs = ["main.go"],
    importpath = "github.com/jeffpignataro/golang/cmd/euler/12",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/log",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "12",
    embed = [":12_lib"],
    visibility = ["//visibility:public"],
)
