load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "13_lib",
    srcs = ["main.go"],
    importpath = "workspace/cmd/euler/13",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "13",
    embed = [":13_lib"],
    visibility = ["//visibility:public"],
)
