load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

go_library(
    name = "13_lib",
    srcs = ["main.go"],
    importpath = "golang/cmd/euler/13",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "13",
    embed = [":13_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "13_image",
    base = "@golang_amd64//image",
    entrypoint = ["/13"],
    files = [":13"],
)

container_push(
    name = "13_push",
    format = "Docker",
    image = ":13_image",
    registry = "242583965106.dkr.ecr.us-west-2.amazonaws.com",
    repository = "sample_terraform",
    tag = "bazel",
    tags = ["excluded"],
)
